# metis

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  sample.env
.github/workflows/: ci.yml
docs/: dsl.md
examples/: run_request.py
metis/: __init__.py  config.py  conversation_engine.py  exceptions.py
metis/cli/: __init__.py  main.py  tasks.py  worker.py
metis/commands/: __init__.py  base.py  generate.py  schedule.py  search.py  sql.py
metis/components/: __init__.py  model_manager.py  prompt_builder.py  session.py  session_manager.py  tool_executor.py
metis/dsl/: __init__.py  ast.py  errors.py  grammar.py  interpreter.py  lexer.py  parser.py  registry.py  tokens.py  validators.py
metis/events/: __init__.py  bus.py  event.py  observers.py
metis/handler/: __init__.py  model_router.py  request_handler.py
metis/handlers/: audit.py  base.py  execute.py  permissions.py  pipelines.py  ratelimit.py  validation.py
metis/inspection/: __init__.py  records.py  service.py  visitors.py
metis/mediator/: __init__.py  context.py  conversation_mediator.py
metis/memory/: manager.py  snapshot.py
metis/models/: huggingface_model.py  model_client.py  model_factory.py  model_proxy.py  openai_model.py  singleton_cache.py
metis/policy/: __init__.py  auth.py  base.py  rate_limit.py
metis/prompts/: prompt.py  prompt_builder.py
metis/scheduling/: __init__.py  clock.py  executors.py  retry.py  scheduler.py  worker.py
tests/: __init__.py  configtest.py  conftest.py  test_utils.py
(+113 files in other folders)
